# services/users.service.js
@@ -1,5 +1,7 @@
 const users = require('../models/users.model');
 const authUtils = require('../_helpers/auth.utils');
+const ROLE = require('../_helpers/role');
+const { testPwd, testLogin } = require('../_helpers/validator');
 
 const authorize = async (userId, res) => {
   const resUserToJWT = await users.getUserPayload(userId);
@@ -7,8 +9,48 @@ const authorize = async (userId, res) => {
   return authUtils.createToken(id, role);
 };
 
+const userExists = (user, res) => {
+  if (!user) {
+    res.sendStatus(404);
+    throw new Error('User not found');
+  }
+};
+
+const checkLogin = async (login, res) => {
+  if (!testLogin(login)) {
+    res.status(400);
+    throw new Error('Login is incorrect');
+  }
+  const resDb = await users.getUserByLogin(login);
+  if (resDb.rows[0]) {
+    throw new Error('Login already exists');
+  }
+};
+
+const compareLogin = (login, newLogin, res) => {
+  if (login !== newLogin) {
+    res.status(500);
+    throw new Error('Change login rejected');
+  }
+};
+
+const checkPwd = (password, res) => {
+  if (!testPwd(password)) {
+    throw new Error('Password invalid');
+  }
+};
+
+const checkAccess = (id, user, res) => {
+  if (id !== user.sub && user.role !== ROLE.Admin) {
+    res.sendStatus(403);
+    throw new Error('Premission denided');
+  }
+};
+
 const signUp = async (body, res) => {
   try {
+    checkLogin(body.login);
+    checkPwd(body.password);
     const result = await users.addUser(body);
     const id = result.rows[0].id;
     const token = await authorize(id, res);
@@ -16,7 +58,7 @@ const signUp = async (body, res) => {
   } catch (err) {
     err.code === '23505'
       ? res.status(409).send({ error: 'Login already exists' })
-      : res.send({ error: err });
+      : res.status(400).send({ error: err.message });
   }
 };
 
@@ -39,22 +81,43 @@ const signIn = async (login, password, res) => {
   }
 };
 
+const changeLogin = async (req, res, next) => {
+  try {
+    await checkLogin(req.body.newLogin, res);
+
+    const { user: currentUser } = req;
+    const { newLogin } = req.body;
+
+    checkAccess(req.params.id, currentUser.role, res);
+
+    let resDb = await users.getUserById(req.params.id);
+    const user = resDb.rows[0];
+    userExists(user, res);
+
+    resDb = await users.changeLogin(user.id, newLogin);
+    const { login } = resDb.rows[0];
+    compareLogin(login);
+    res.sendStatus(204);
+  } catch (err) {
+    next(err);
+  }
+};
+
 const changePassword = async (id, password, newPassword, res) => {
   let resStatus = 500;
 
   try {
-    // eslint-disable-next-line no-use-before-define
     const resUserToCheck = await users.getUserById(id);
     const user = resUserToCheck.rows[0];
     if (!user) {
       resStatus = 404;
-      return res.status(resStatus).send({ error: 'Such user don`t exist' });
+      return res.status(resStatus).send({ error: 'User not found' });
     }
     const { hash, salt } = user;
 
     if (!authUtils.valid(password, hash, salt)) {
       resStatus = 400;
-      return res.status(resStatus).send({ error: 'Old or password is incorrect' });
+      return res.status(resStatus).send({ error: 'oldPassword or password is incorrect' });
     };
     const resPasswordChange = await users.changePassword(id, newPassword);
     res.send(resPasswordChange.rows[0]);
@@ -67,7 +130,6 @@ const changeRole = async (id, newRole, res) => {
   let resStatus = 500;
 
   try {
-    // eslint-disable-next-line no-use-before-define
     const resUserToCheck = await users.getUserById(id);
     const user = resUserToCheck.rows[0];
     if (!user) {
@@ -97,4 +159,4 @@ const getAll = async (res) => {
   }
 };
 
-module.exports = { signUp, signIn, changePassword, changeRole, getAll };
+module.exports = { signUp, signIn, changeLogin, changePassword, changeRole, getAll };
